# backtometal

./: .gitignore  README.md  build.sh  ignite  launch.sh  x86-architecture.txt
binary/iso/boot/grub/: grub.cfg
documentation/: BackToMetal.odt  x86-architecture.txt
sources/: CMakeLists.txt
sources/kernel/: CMakeLists.txt  build.sh  kernel.d  loader.asm
sources/samples/: CMakeLists.txt
sources/samples/A20Gate/: BiosEnableA20Gate.asm  FastEnableA20Gate.asm
sources/samples/DetectLongMode/: CMakeLists.txt
src/samples/A20Gate/: A20Gate.asm  BiosDisableA20Gate.asm  BootloaderFooter.asm  BootloaderHeader.asm  CMakeLists.txt  DetectA20Gate.asm  FastDisableA20Gate.asm  PrintA20Gate.asm
src/samples/Basic/: Basic.asm  CMakeLists.txt
src/samples/DetectLongMode/: DetectLongMode.asm
src/samples/common/: Print.asm
src/tools/: cpo
