cmake_minimum_required(VERSION 2.8.1)

set(BINARY_OUTPUT "${CMAKE_SOURCE_DIR}/../binary")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BINARY_OUTPUT})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BINARY_OUTPUT}) 
set(MODULE_OUTPUT_DIRECTORY ${BINARY_OUTPUT})
set(RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT})
set(EXECUTABLE_OUTPUT_PATH ${BINARY_OUTPUT})
set(LIBRARY_OUTPUT_PATH ${BINARY_OUTPUT})
set(PROJECT_BINARY_DIR ${BINARY_OUTPUT})

project(btm ASM_NASM D)

#add_subdirectory(samples)
add_subdirectory(kernel)
